# Neo4j-Agent

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
app/: README.md  __init__.py  main.py  requirements.txt
app/agent/: checkpointer.py  factory.py  graph.py  state.py  trimming.py
app/api/routes/: chat.py  health.py  schema.py  sessions.py
app/api/schemas/: __init__.py  chat.py  sessions.py
app/core/: __init__.py  config.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  masking.py  tracing.py
app/graph/: __init__.py  connection.py  schema_cache.py  topology.py
app/graph/cypher/: __init__.py  callback.py  coreference.py  dynamic_examples.py  entity_resolver.py  prompts.py  retry.py  safety.py  schema_validation.py  synonyms.py  topology_filter.py  validation.py
app/graph/cypher/entity_resolution/: __init__.py  capabilities.py  label_resolver.py  models.py  name_resolver.py  orchestrator.py
app/llm/: factory.py
app/mcp/: server.py
app/mcp/tools/: __init__.py  graph_query.py  schema_info.py  vector_search.py
app/middleware/: auth.py  rate_limit.py
app/services/: __init__.py  graph_query.py  query_dedup.py
docs/images/: README.md  entity_resolution_flow.mmd  system_design.mmd
scripts/: batch_chat.py  load_sample_movies.py  test_cypher_trace.py  test_tracing.py
src/: README.md  __init__.py  main.py  requirements.txt
src/agent/: checkpointer.py  factory.py  graph.py  pipeline.py  state.py  supervisor.py
src/agent/specialists/: __init__.py  coreference.py  cypher_execution.py  cypher_generation.py  cypher_validation.py  entity_resolution.py  result_verification.py  retry_decision.py  synthesis.py  topology_filter.py
src/api/routes/: chat.py  health.py  schema.py  sessions.py
src/api/schemas/: health.py
src/core/: config.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  masking.py  query_dedup.py
src/graph/: connection.py  schema_cache.py  semantic_layer.py  topology.py
src/graph/cypher/: callback.py  coreference.py  dynamic_examples.py  entity_resolver.py  prompts.py  retry.py  safety.py  schema_reasoning.py  schema_validation.py  synonyms.py  topology_filter.py  validation.py
src/graph/cypher/entity_resolution/: __init__.py  capabilities.py  label_resolver.py  models.py  name_resolver.py  orchestrator.py
src/llm/: factory.py
src/mcp/: server.py
src/mcp/tools/: __init__.py  graph_query.py  schema_info.py  vector_search.py
src/middleware/: auth.py  rate_limit.py
src/services/: graph_query.py  query_dedup.py
tests/: test_entity_resolver.py  test_masking.py  test_trimming.py
