[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neo4j-agent"
version = "1.0.0"
description = "Enterprise Neo4j LangGraph Agent with FastAPI and FastMCP"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # MCP
    "fastmcp>=2.3.0",
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-neo4j>=0.3.0",
    "langchain-ollama>=0.2.0",
    # LangGraph + Redis checkpointer
    "langgraph>=0.2.0",
    "langgraph-checkpoint-redis>=2.0.0",
    # Redis
    "redis[asyncio]>=5.0.0",
    # Neo4j driver
    "neo4j>=5.19.0",
    # Config
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Structured logging
    "structlog>=24.0.0",
    "python-json-logger>=2.0.0",
    # Observability
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "fakeredis[asyncio]>=2.23.0",
    "ruff>=0.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
